# urban-flood-intelligence-platform

./: .gitignore  README.md  architecture.md  main.py  pyproject.toml  requirements.txt  start.sh
.streamlit/: config.toml
notebooks/: 01_data_ingestion.ipynb  02_terrain_analysis.ipynb  03_feature_engineering.ipynb  04_model_training.ipynb  05_risk_scoring.ipynb  06_dashboard_visualization.ipynb
scripts/: _check_env.py  download_dem.py  download_rainfall.py  run_pipeline.py
src/: __init__.py  data_loader.py  feature_engineering.py  hydrology.py  modeling.py  pipeline.py  risk_scoring.py  terrain_analysis.py  utils.py  visualization.py
streamlit_app/: app.py
zerve/: README.md  bootstrap.py  requirements.txt
zerve/app/: main.py
zerve/blocks/: _bootstrap_inline.py  block_01_ingest.py  block_02_terrain_hydrology.py  block_03_features.py  block_04_model.py  block_05_scoring.py  block_06_visuals.py
